# Shetty777

./: .gitignore  Procfile  README  README.md  app.py  pyproject.toml  requirements.txt
migrations/versions/: 7e829096dc5a_increased_size_limit.py  9ae6fccdc7c9_added_author_column_to_posts.py  c6354feb5913_changed_user_to_admin_changed_some_.py
website/: __init__.py  auth.py  generate_token.py  models.py  routes.py
website/posts/: 001-environmental_consciousness.html  002-story_analysis_of_the_homecoming.html  003-can_money_buy_happiness.html  004-how_social_media_has_improved_human_communication.html  005-k_p_poornachandra_tejaswi.html  006-Necessity_is_the_mother_of_invention.html  007-What_are_five_habits_we_can_adopt_to_reduce_waste_and_promote_recycling.html  008-Learn_python_in_7_days_day1.html  009-Learn_python_in_7_days_day2.html  010-Learn_python_in_7_days_day3.html  011-Learn_python_in_7_days_day4.html  012-Learn_python_in_7_days_day5.html  013-Learn_python_in_7_days_day6.html
website/static/: robots.txt  script.js  sitemap.xml  style.css
website/templates/: about.html  articles.html  base.html  blogs.html  dashboard.html  footer.html  forgot_password.html  index.html  login.html  navbar.html  post.html  post_list.html  postlist.html  projects.html  reset_password.html  signin.html  signup.html  sublist.html  subscribe.html  subscriber_list.html  verify_email.html  verify_email_refreshed.html
website/templates/email/: new_post.html  password_reset.html  subscriber_deleted.html  verify.html  verify_refreshed.html
website/templates/error_handlers/: 401.html  403.html  404.html  405.html  500.html  502.html
