[project]
name = "Shetty777"
version = "0.1.0"
description = "Shashank Shetty's blog site"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.15.2",
    "beautifulsoup4==4.13.3",
    "blinker==1.9.0",
    "bs4==0.0.2",
    "cachelib==0.13.0",
    "cffi==1.17.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography==44.0.2",
    "datetime==5.5",
    "distlib==0.3.9",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "filelock==3.18.0",
    "flask==3.1.0",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-redmail",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "greenlet==3.1.1",
    "gunicorn",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "packaging==24.2",
    "pip-review==1.3.0",
    "platformdirs==4.3.7",
    "psycopg2-binary==2.9.10",
    "pycparser==2.22",
    "pyjwt==2.10.1",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "redmail==0.6.0",
    "setuptools==78.1.0",
    "soupsieve==2.6",
    "sqlalchemy==2.0.40",
    "typing-extensions==4.13.1",
    "tzdata==2025.2",
    "virtualenv==20.30.0",
    "waitress==3.0.2",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wtforms==3.2.1",
    "zope-interface==7.2",
]

[tool.uv.sources]
flask-redmail = { git = "https://github.com/shetty-777/flask-redmail-g", rev = "32f7c9ec5c072fedf29f87fb0795e7b0ca0c6c56" }
gunicorn = { git = "https://github.com/shetty-777/gunicorn.git", rev = "427aa5d1ed10724b645854a1f2ebe86143eab964" }
